kubernetes/deployment.yaml
# deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  name: "${APP_NAME}"
  labels:
    app: "${APP_LABEL}"
spec:
  revisionHistoryLimit: 3
  replicas: ${NUM_REPLICAS}
  selector:
    matchLabels:
      app: "${APP_LABEL}"
  template:
    metadata:
      labels:
        app: "${APP_LABEL}"
    spec:
      imagePullSecrets:
      - name: "gitlab-auth-${NAMESPACE}"
      containers:
      - name: "${APP_NAME}"
        image: "$IMAGE_NAME:$VERSION"
        ports:
          - containerPort: ${APP_PORT}
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        imagePullPolicy: Always
        # livenessProbe:
        #   httpGet:
        #     path: /metrics
        #     port: ${APP_PORT}
        #   initialDelaySeconds: ${LIVENESS_INITIAL_DELAY_SECONDS}
        #   periodSeconds: 3
        #   timeoutSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /metrics
        #     port: ${APP_PORT}
        #   initialDelaySeconds: ${READINESS_INITIAL_DELAY_SECONDS}
        #   periodSeconds: 3
        #   timeoutSeconds: 10
        resources:
          limits:
            cpu: "${CPU_LIMIT}"
            memory: "${MEMORY_LIMIT}"
          requests:
            cpu: "${CPU_REQUEST}"
            memory: "${MEMORY_REQUEST}"
      securityContext:
        runAsUser: 10001
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "80"
      volumes:
      - name: tmp
        emptyDir:
          sizeLimit: 1Mi
