kubernetes/istio-VirtualService.yaml
# istio-VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "${APP_NAME}-vs"
spec:
  hosts:
  - "${DEPLOY_HOST}"
  gateways:
  - "${APP_NAME}-gatway"
  http:
  - route:
    - destination:
        host: "${APP_NAME}"
        port:
          number: 80
